# EL-num

./: CMakeCache.txt  CMakeLists.txt  README  README.md  compileJavier.sh
src/: NumodisExportBNodes.F90  NumodisExportStress.F90  NumodisImport.F90  driver.f90.old  global.F90
wrapper/fortran/: numodis_cc2fortran.bind  numodis_module.f90  stressexchange_cc2fortran.bind  stressexchange_module.f90
